<resources>
    <string name="app_name">BookApp</string>
    <string name="title_favorite">favorite</string>
    <string name="title_home">Home</string>
    <string name="authors">author</string>
    <string name="publish_year">year</string>
    <string name="description">deskripsi</string>
    <string name="favorite">favorite</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_favorite_module">Loading favorite module…</string>
    <string name="book_cover">Book Cover</string>
</resources>